--- a/win32/demo/glut_input.vcproj
+++ b/win32/demo/glut_input.vcproj
@@ -2,11 +2,11 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="subprocess"
-	ProjectGUID="{BBC8887A-61BF-4B64-8F23-255B82D60956}"
-	RootNamespace="subprocess"
+	Name="glut_input"
+	ProjectGUID="{C64F984B-84F2-4D44-BBA8-35DF8E5F5365}"
+	RootNamespace="glut_input"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
+	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -41,37 +41,32 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\..\chromium\chromium\src;..\..\..\..\dependencies\ch\c\src"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\..\include;..\..\demo;."
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
-				BasicRuntimeChecks="2"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				DebugInformationFormat="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib usp10.lib psapi.lib dbghelp.lib urlmon.lib berkelium_d.lib sandbox.lib base.lib"
-				OutputFile="..\berkelium_d.exe"
+				AdditionalDependencies="berkelium_d.lib"
+				OutputFile="..\$(ProjectName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Debug\lib;..\..\..\..\dependencies\ch\c\src\chrome\Debug\lib"
-				IgnoreDefaultLibraryNames="libcmtd.lib, msvcprtd.lib"
+				AdditionalLibraryDirectories=".."
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(TargetDir)berkelium_exe_d.pdb"
-				SubSystem="2"
-				ImportLibrary="$(TargetDir)berkelium_exe_d.lib"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -123,8 +118,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\include;..\..\..\chromium\chromium\src;..\..\..\..\dependencies\ch\c\src"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\..\include;..\..\demo;."
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -136,25 +131,20 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				LinkLibraryDependencies="false"
-				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib usp10.lib psapi.lib dbghelp.lib urlmon.lib berkelium.lib sandbox.lib base.lib"
-				OutputFile="..\berkelium.exe"
+				AdditionalDependencies="berkelium.lib"
+				OutputFile="..\$(ProjectName).exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Release\lib;..\..\..\..\dependencies\ch\c\src\chrome\Release\lib"
-				IgnoreDefaultLibraryNames="libcmt.lib, msvcprt.lib"
+				AdditionalLibraryDirectories=".."
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(TargetDir)berkelium_exe.pdb"
-				SubSystem="2"
-				OptimizeReferences="1"
+				SubSystem="1"
+				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="$(TargetDir)berkelium_exe.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -189,7 +179,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\subprocess.cpp"
+				RelativePath="..\..\demo\glut_input\glut_input.cpp"
 				>
 			</File>
 		</Filter>
@@ -198,16 +188,16 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\demo\glut_util\glut_util.hpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-			<File
-				RelativePath="..\..\..\chromium\chromium\src\chrome\app\chrome_exe.rc"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
