--- a/win32/demo/ppmrender.vcproj
+++ b/win32/demo/ppmrender.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="subprocess"
-	ProjectGUID="{BBC8887A-61BF-4B64-8F23-255B82D60956}"
-	RootNamespace="subprocess"
+	Name="ppmrender"
+	ProjectGUID="{96E21329-033B-4CFA-9C49-C280D18E6EFB}"
+	RootNamespace="ppmrender"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -41,12 +41,10 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\..\chromium\chromium\src;..\..\..\..\dependencies\ch\c\src"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
-				BasicRuntimeChecks="2"
 				RuntimeLibrary="3"
-				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -56,22 +54,18 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib usp10.lib psapi.lib dbghelp.lib urlmon.lib berkelium_d.lib sandbox.lib base.lib"
-				OutputFile="..\berkelium_d.exe"
+				AdditionalDependencies="berkelium_d.lib"
+				OutputFile="..\$(ProjectName)_d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Debug\lib;..\..\..\..\dependencies\ch\c\src\chrome\Debug\lib"
-				IgnoreDefaultLibraryNames="libcmtd.lib, msvcprtd.lib"
+				AdditionalLibraryDirectories="..;..\subprocess"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(TargetDir)berkelium_exe_d.pdb"
-				SubSystem="2"
-				ImportLibrary="$(TargetDir)berkelium_exe_d.lib"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -123,8 +117,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\include;..\..\..\chromium\chromium\src;..\..\..\..\dependencies\ch\c\src"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -136,25 +130,20 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				LinkLibraryDependencies="false"
-				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib usp10.lib psapi.lib dbghelp.lib urlmon.lib berkelium.lib sandbox.lib base.lib"
-				OutputFile="..\berkelium.exe"
+				AdditionalDependencies="berkelium.lib"
+				OutputFile="..\$(ProjectName).exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Release\lib;..\..\..\..\dependencies\ch\c\src\chrome\Release\lib"
-				IgnoreDefaultLibraryNames="libcmt.lib, msvcprt.lib"
+				AdditionalLibraryDirectories="..;..\subprocess"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(TargetDir)berkelium_exe.pdb"
-				SubSystem="2"
-				OptimizeReferences="1"
+				SubSystem="1"
+				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="$(TargetDir)berkelium_exe.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -189,7 +178,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\subprocess.cpp"
+				RelativePath="..\..\demo\ppmrender\ppmmain.cpp"
 				>
 			</File>
 		</Filter>
@@ -204,10 +193,6 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-			<File
-				RelativePath="..\..\..\chromium\chromium\src\chrome\app\chrome_exe.rc"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
