--- a/win32/subprocess/subprocess.vcproj
+++ b/win32/subprocess/subprocess.vcproj
@@ -136,7 +136,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome"
+				AdditionalIncludeDirectories="&quot;..\..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
