Fixed 0xc0000005 error in berkelium_d.exe
This was caused by a missing reference to strcmp, and had something to do with linking to the wrong version of the CRT.

Note: To debug this, you need to set a breakpoint in BrokerServicesBase::SpawnTarget after target->Create. Then, attach to the newly spawned process, and break in ResolverThunk::ResolveInterceptor(), continue, and you will be able to debug the crash.

--- a/win32/demo/glut_demo.vcproj
+++ b/win32/demo/glut_demo.vcproj
@@ -62,7 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="berkelium_d.lib"
-				OutputFile="..\$(ProjectName).exe"
+				OutputFile="..\$(ProjectName)_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=".."
 				GenerateDebugInformation="true"
