--- a/win32/subprocess/subprocess.vcproj
+++ b/win32/subprocess/subprocess.vcproj
@@ -45,7 +45,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="2"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -67,7 +67,8 @@
 				OutputFile="..\berkelium_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Debug\lib;..\..\..\..\dependencies\ch\c\src\chrome\Debug\lib"
-				IgnoreDefaultLibraryNames="libcmtd.lib, msvcprtd.lib"
+				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)berkelium_exe_d.pdb"
 				SubSystem="2"
@@ -125,7 +126,7 @@
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\..\include;..\..\..\chromium\chromium\src;..\..\..\..\dependencies\ch\c\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -148,7 +149,8 @@
 				OutputFile="..\berkelium.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..;..\..\..\chromium\chromium\src\chrome\Release\lib;..\..\..\..\dependencies\ch\c\src\chrome\Release\lib"
-				IgnoreDefaultLibraryNames="libcmt.lib, msvcprt.lib"
+				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)berkelium_exe.pdb"
 				SubSystem="2"
