Got scrolling and painting working in glut_input.
onPaint now has two extra arguments: num_copy_rects, and copy_rects.
These are a list of rectangles, relative to (0,0) that have changed, often greater than 1.
All copy_rects are guaranteed to lie within bitmap_rect
(so you need subtract top and left coords when reading from the bitmap)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ IF(CHROME_FOUND)
   FOREACH(CHROME_CFLAG ${CHROME_CFLAGS})
     SET(CHROMIUM_CFLAGS "${CHROMIUM_CFLAGS} ${CHROME_CFLAG}")
   ENDFOREACH()
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Woverloaded-virtual")
   IF(APPLE)
     ADD_DEFINITIONS(-isysroot /Developer/SDKs/MacOSX10.5.sdk -arch i386 -mmacosx-version-min=10.5 )
     SET(BERKELIUM_LDFLAGS "-Wl,-syslibroot -Wl,/Developer/SDKs/MacOSX10.5.sdk/")
