Moved Berkelium::forkedProcessHook into its own file.
ForkedProcessHook.cpp now only contains code called by child processes.
All other files now only contain code called by the browser/root process.

--- a/win32/berkelium.vcproj
+++ b/win32/berkelium.vcproj
@@ -203,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\ForkedProcessHook.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\MemoryRenderViewHost.cpp"
 				>
 			</File>
