Supports binding values and c++ functions in Javascript.
Also, exposes JSON utilities to make calling executeJavascript() easier.
C++ functions can be called either async or synchronously with a return value.
JSON utilities do not support non-empty objects or arrays.
Sending callback functions from JS to c++ does not work yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ SET(BERKELIUM_CHROME_FOUND ${CHROME_FOUND})
 IF(CHROME_FOUND)
   INCLUDE_DIRECTORIES(${BERKELIUM_TOP_LEVEL}/include ${CHROME_INCLUDE_DIRS})
   LINK_DIRECTORIES(${CHROME_LIBRARY_DIRS} ../lib .)
-  SET(BERKELIUM_SOURCE_NAMES src/Berkelium src/Context src/Cursor src/ContextImpl src/ForkedProcessHook src/NavigationController src/RenderWidget src/MemoryRenderViewHost src/Root src/Window src/WindowImpl)
+  SET(BERKELIUM_SOURCE_NAMES src/Berkelium src/Context src/Cursor src/ContextImpl src/ForkedProcessHook src/NavigationController src/RenderWidget src/MemoryRenderViewHost src/Root src/ScriptUtilImpl src/ScriptVariant src/Window src/WindowImpl)
 
 
   SET(BERKELIUM_SOURCES)
