Added CXXTest testing suite.
Fixed "rpath" so we don't include all these ridiculous chromium paths in our binaries.
First pass at a testing framework in Berkelium.
Added test which loads about:blank and checks that onLoad is called.
Tests may hang if there is a bug in berkelium, since the delegate won't be called.
So we may need some sort of timeout to catch these cases without waiting forever.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,9 @@ SET(CMAKE_MODULE_PATH
   ${BERKELIUM_TOP_LEVEL}
   ${BERKELIUM_TOP_LEVEL}/build/modules/
 )
-
+INCLUDE(ListUtil)
+INCLUDE(CXXTest)
+FIND_PACKAGE(PythonInterp)
 
 IF(NOT CHROME_ROOT)
   SET(CHROME_ROOT_SEARCH_PATHS
@@ -52,9 +54,11 @@ SET(CHROME_FOUND_QUIETLY TRUE)
 FIND_PACKAGE(Chrome)
 
 SET(BERKELIUM_CHROME_FOUND ${CHROME_FOUND})
+SET(CXXTESTRoot ${BERKELIUM_TOP_LEVEL}/externals/cxxtest)
 
 IF(CHROME_FOUND)
-  INCLUDE_DIRECTORIES(${BERKELIUM_TOP_LEVEL}/include ${CHROME_INCLUDE_DIRS})
+  INCLUDE_DIRECTORIES(${BERKELIUM_TOP_LEVEL}/include ${CHROME_INCLUDE_DIRS} ${CXXTESTRoot})
+
   LINK_DIRECTORIES(${CHROME_LIBRARY_DIRS} ../lib .)
   SET(BERKELIUM_SOURCE_NAMES src/Berkelium src/Context src/Cursor src/ContextImpl src/ForkedProcessHook src/NavigationController src/RenderWidget src/MemoryRenderViewHost src/Root src/ScriptUtilImpl src/ScriptVariant src/StringUtil src/Window src/WindowImpl)
 
@@ -87,6 +91,7 @@ IF(CHROME_FOUND)
   SET_TARGET_PROPERTIES(libberkelium PROPERTIES LINK_FLAGS "${CHROMIUM_LDFLAGS} ${BERKELIUM_LDFLAGS}")
   SET_TARGET_PROPERTIES(libberkelium PROPERTIES COMPILE_FLAGS "${CHROMIUM_CFLAGS}")
   SET_TARGET_PROPERTIES(libberkelium PROPERTIES DEBUG_POSTFIX "_d")
+  SET_TARGET_PROPERTIES(libberkelium PROPERTIES SKIP_BUILD_RPATH ON)
   TARGET_LINK_LIBRARIES(libberkelium ${CHROME_LIBRARIES})
 
   IF(APPLE)
@@ -97,8 +102,9 @@ IF(CHROME_FOUND)
 
   # berkelium -- renderer binary
   ADD_EXECUTABLE(berkelium ${BERKELIUM_TOP_LEVEL}/subprocess.cpp)
-  SET_TARGET_PROPERTIES(berkelium PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+  SET_TARGET_PROPERTIES(berkelium PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
   TARGET_LINK_LIBRARIES(berkelium -L. debug liblibberkelium_d${CHROMIUM_DYLIB_EXT} optimized liblibberkelium${CHROMIUM_DYLIB_EXT} )
+  SET_TARGET_PROPERTIES(berkelium PROPERTIES SKIP_BUILD_RPATH ON)
   ADD_DEPENDENCIES(berkelium libberkelium)
 
   # Useful values for setting up demo apps
@@ -107,7 +113,8 @@ IF(CHROME_FOUND)
   # ppmrender -- demo app
   ADD_EXECUTABLE(ppmrender ${BERKELIUM_TOP_LEVEL}/demo/ppmrender/ppmmain.cpp)
   TARGET_LINK_LIBRARIES(ppmrender ${BERKELIUM_LINK_LIBS})
-  SET_TARGET_PROPERTIES(ppmrender PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+  SET_TARGET_PROPERTIES(ppmrender PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
+  SET_TARGET_PROPERTIES(ppmrender PROPERTIES SKIP_BUILD_RPATH ON)
   ADD_DEPENDENCIES(ppmrender libberkelium)
   IF(APPLE)
     ADD_CHROME_APP(
@@ -133,8 +140,9 @@ IF(CHROME_FOUND)
   IF(OPENGL_FOUND AND GLUT_FOUND)
     ADD_EXECUTABLE(glut_demo ${BERKELIUM_TOP_LEVEL}/demo/glut_demo/glut_demo.cpp)
     TARGET_LINK_LIBRARIES(glut_demo ${BERKELIUM_LINK_LIBS})
-    SET_TARGET_PROPERTIES(glut_demo PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+    SET_TARGET_PROPERTIES(glut_demo PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
     TARGET_LINK_LIBRARIES(glut_demo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
+    SET_TARGET_PROPERTIES(glut_demo PROPERTIES SKIP_BUILD_RPATH ON)
     ADD_DEPENDENCIES(glut_demo libberkelium)
     IF(APPLE)
       ADD_CHROME_APP(
@@ -150,8 +158,9 @@ IF(CHROME_FOUND)
   IF(OPENGL_FOUND AND GLUT_FOUND)
     ADD_EXECUTABLE(glut_input ${BERKELIUM_TOP_LEVEL}/demo/glut_input/glut_input.cpp)
     TARGET_LINK_LIBRARIES(glut_input ${BERKELIUM_LINK_LIBS})
-    SET_TARGET_PROPERTIES(glut_input PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+    SET_TARGET_PROPERTIES(glut_input PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
     TARGET_LINK_LIBRARIES(glut_input ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
+    SET_TARGET_PROPERTIES(glut_input PROPERTIES SKIP_BUILD_RPATH ON)
     ADD_DEPENDENCIES(glut_input libberkelium)
     IF(APPLE)
       ADD_CHROME_APP(
@@ -166,8 +175,9 @@ IF(CHROME_FOUND)
   IF(APPLE)
     ADD_LIBRARY(plugin_carbon_interpose SHARED ${CHROME_ROOT}/src/chrome/browser/plugin_carbon_interpose_mac.cc)
     SET_TARGET_PROPERTIES(plugin_carbon_interpose PROPERTIES COMPILE_FLAGS ${CHROMIUM_CFLAGS})
-    SET_TARGET_PROPERTIES(plugin_carbon_interpose PROPERTIES LINK_FLAGS "-framework Carbon ${BERKELIUM_LDFLAGS}")
+    SET_TARGET_PROPERTIES(plugin_carbon_interpose PROPERTIES LINK_FLAGS "-framework Carbon ${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
     TARGET_LINK_LIBRARIES(plugin_carbon_interpose -L. debug liblibberkelium_d.dylib optimized liblibberkelium.dylib )
+    SET_TARGET_PROPERTIES(plugin_carbon_interpose PROPERTIES SKIP_BUILD_RPATH ON)
     ADD_DEPENDENCIES(plugin_carbon_interpose libberkelium)
 
   ENDIF()
@@ -189,6 +199,25 @@ IF(CHROME_FOUND)
     INSTALL(DIRECTORY ${CHROMIUM_DATADIR}/resources
         DESTINATION bin)
   ENDIF()
+
+  SET(TEST_BINARY tests)
+
+  #test source files
+  SET(TEST_FILES
+    ${BERKELIUM_TOP_LEVEL}/test/BlankTest.hpp
+  )
+  ADD_CXXTEST_CPP_TARGET(
+    ${TEST_BINARY}
+    LIBRARYDIR ${CXXTESTRoot}
+    TESTS ${TEST_FILES}
+    RUNNER ${BERKELIUM_TOP_LEVEL}/test/Test.cpp)
+
+  TARGET_LINK_LIBRARIES(${TEST_BINARY} -llibberkelium)
+  ADD_DEPENDENCIES(${TEST_BINARY} berkelium libberkelium)
+
+  ADD_CUSTOM_TARGET(test
+    DEPENDS ${TEST_BINARY}
+    COMMAND ${TEST_BINARY} $ENV{SINGLE_SUITE})
 ENDIF(CHROME_FOUND)
 
 FIND_PACKAGE(Doxygen)
