Updated patches for chromium 11.0.696.77, updated patching instructions for Cygwin in WINDOWS-BUILDING.txt, adds a new resource with version info to berkelium.dll.
chromium_win32_sandbox_exports.patch seemed to be wrong, i rehooked 'policy_broker.h' to 'interception.h'

--- a/win32/berkelium.vcproj
+++ b/win32/berkelium.vcproj
@@ -289,6 +289,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\berkelium_resources.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\browser_resources.rc"
 				>
 			</File>
@@ -306,6 +310,10 @@
 			</File>
 			<File
 				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\renderer_resources.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
