Only the bin and lib directories get installed, install the include directory also.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,8 @@ IF(CHROME_FOUND)
           DESTINATION bin
           LIBRARY
           DESTINATION lib)
+  INSTALL(DIRECTORY include/berkelium
+      DESTINATION include)
   IF(NOT APPLE)
     INSTALL(FILES
           ${CHROMIUM_DATADIR}/chrome.pak
