--- a/win32/berkelium.vcproj
+++ b/win32/berkelium.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="..\bin"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
@@ -48,6 +48,7 @@
 				RuntimeLibrary="1"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="0"
+				ObjectFile="$(IntDir)\"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -65,9 +66,9 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/DELAYLOAD:&quot;dbghelp.dll&quot; /DELAYLOAD:&quot;dwmapi.dll&quot; /DELAYLOAD:&quot;uxtheme.dll&quot; /DELAYLOAD:&quot;avcodec-52.dll&quot; /DELAYLOAD:&quot;avformat-52.dll&quot; /DELAYLOAD:&quot;avutil-50.dll&quot; /DELAYLOAD:&quot;crypt32.dll&quot; /DELAYLOAD:&quot;cryptui.dll&quot; /DELAYLOAD:&quot;winhttp.dll&quot; /DELAYLOAD:&quot;wininet.dll&quot; /DELAYLOAD:&quot;wsock32.dll&quot; /DELAYLOAD:&quot;ws2_32.dll&quot; /DELAYLOAD:&quot;winspool.drv&quot; /DELAYLOAD:&quot;comdlg32.dll&quot; /DELAYLOAD:&quot;imagehlp.dll&quot; /DELAYLOAD:&quot;urlmon.dll&quot; /DELAYLOAD:&quot;imm32.dll&quot; /DELAYLOAD:&quot;iphlpapi.dll&quot; /DELAYLOAD:&quot;setupapi.dll&quot;"
 				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib dnsapi.lib usp10.lib psapi.lib dbghelp.lib sandbox.lib locationapi.lib avcodec-52.lib avformat-52.lib avutil-50.lib ..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\allocator\libcmt.lib differ_block_sse2.lib differ_block.lib chromoting_host.lib chromoting_base.lib trace_proto_lib.lib chromotocol_proto_lib.lib platform_qual_lib.lib ldrhandle.lib browserhandle.lib handle_lookup.lib service_runtime_x86_32.lib ncopcode_utils.lib ncvalidate.lib service_runtime_x86_common.lib gio_wrapped_desc.lib nacl_base.lib imc.lib nrd_xfer.lib gdb_rsp.lib debug_stub.lib nonnacl_srpc.lib platform.lib gio.lib env_cleanser.lib sel.lib nacl.lib glue.lib webkit_user_agent.lib app_base.lib webkit_gpu.lib plugin.lib command_buffer_service.lib libglesv2.lib libegl.lib allocator.lib rlz_lib.lib isimpledom.lib iaccessible2.lib quota.lib database.lib hunspell.lib ui_base.lib translator_glsl.lib webcore_svg.lib webcore_rendering.lib i18n_api.lib webcore_remaining.lib webcore_platform.lib translator_common.lib ots.lib libwebp.lib libxslt.lib iccjpeg.lib wtf.lib yarr.lib webcore_bindings.lib webcore_html.lib webkit.lib speex.lib flac.lib ppapi_proxy.lib content_browser.lib cacheinvalidation.lib sync_notifier.lib sync.lib bspatch.lib lzma_sdk.lib courgette_lib.lib installer_util.lib gtest.lib http_server.lib debugger.lib ppapi_cpp_objects.lib chromoting_protocol.lib chromoting_client.lib libsrtp.lib notifier.lib chromoting_jingle_glue.lib yuv_convert_sse2.lib cpu_features.lib yuv_convert.lib media.lib chromoting_plugin.lib libjingle_p2p.lib expat.lib libjingle.lib ppapi_shared_impl.lib blob.lib appcache.lib libbzip2.lib fileapi.lib ipc.lib content_common.lib libxml2.lib default_plugin.lib gles2_cmd_helper.lib gles2_implementation.lib gles2_c_lib.lib command_buffer_common.lib command_buffer_client.lib gpu_ipc.lib ssl.lib v8_base.lib v8_snapshot.lib net_base.lib sdch.lib googleurl.lib net.lib libjpeg.lib zlib.lib libpng.lib skia_opts.lib skia.lib gfx.lib base_i18n.lib common_net.lib icuuc.lib icui18n.lib sqlite3.lib nspr.lib nss.lib dynamic_annotations.lib modp_b64.lib base.lib common_constants.lib protobuf_lite.lib views.lib cld.lib policy.lib printing.lib service.lib worker.lib utility.lib syncapi.lib renderer.lib profile_import.lib ppapi_plugin.lib chrome_gpu.lib browser.lib common.lib DelayImp.lib"
-				OutputFile="berkelium_d.dll"
+				OutputFile="..\bin\berkelium_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;..\..\chromium\chromium\src\chrome\$(ConfigurationName)\lib&quot;;..\..\chromium\chromium\src\third_party\platformsdk_win2008_6_1\files\lib"
+				AdditionalLibraryDirectories="&quot;..\..\chromium\chromium\src\chrome\Debug\lib&quot;;..\..\chromium\chromium\src\third_party\platformsdk_win2008_6_1\files\lib"
 				IgnoreDefaultLibraryNames="libcmtd.lib;libcmt.lib"
 				DelayLoadDLLs="dbghelp.dll;dwmapi.dll;avcodec-52.dll;avformat-52.dll;avutil-50.dll;crypt32.dll;cryptui.dll;winhttp.dll;wininet.dll;ws2_32.dll;winspool.drv;comdlg32.dll;urlmon.dll;imm32.dll;iphlpapi.dll;prntvpt.dll"
 				GenerateDebugInformation="true"
@@ -145,7 +146,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/DELAYLOAD:&quot;dbghelp.dll&quot; /DELAYLOAD:&quot;dwmapi.dll&quot; /DELAYLOAD:&quot;uxtheme.dll&quot; /DELAYLOAD:&quot;avcodec-52.dll&quot; /DELAYLOAD:&quot;avformat-52.dll&quot; /DELAYLOAD:&quot;avutil-50.dll&quot; /DELAYLOAD:&quot;crypt32.dll&quot; /DELAYLOAD:&quot;cryptui.dll&quot; /DELAYLOAD:&quot;winhttp.dll&quot; /DELAYLOAD:&quot;wininet.dll&quot; /DELAYLOAD:&quot;wsock32.dll&quot; /DELAYLOAD:&quot;ws2_32.dll&quot; /DELAYLOAD:&quot;winspool.drv&quot; /DELAYLOAD:&quot;comdlg32.dll&quot; /DELAYLOAD:&quot;imagehlp.dll&quot; /DELAYLOAD:&quot;urlmon.dll&quot; /DELAYLOAD:&quot;imm32.dll&quot; /DELAYLOAD:&quot;iphlpapi.dll&quot; /DELAYLOAD:&quot;setupapi.dll&quot;"
 				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib dnsapi.lib usp10.lib psapi.lib dbghelp.lib sandbox.lib locationapi.lib avcodec-52.lib avformat-52.lib avutil-50.lib ..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\allocator\libcmt.lib differ_block_sse2.lib differ_block.lib chromoting_host.lib chromoting_base.lib trace_proto_lib.lib chromotocol_proto_lib.lib platform_qual_lib.lib ldrhandle.lib browserhandle.lib handle_lookup.lib service_runtime_x86_32.lib ncopcode_utils.lib ncvalidate.lib service_runtime_x86_common.lib gio_wrapped_desc.lib nacl_base.lib imc.lib nrd_xfer.lib gdb_rsp.lib debug_stub.lib nonnacl_srpc.lib platform.lib gio.lib env_cleanser.lib sel.lib nacl.lib glue.lib webkit_user_agent.lib app_base.lib webkit_gpu.lib plugin.lib command_buffer_service.lib libglesv2.lib libegl.lib allocator.lib rlz_lib.lib isimpledom.lib iaccessible2.lib quota.lib database.lib hunspell.lib ui_base.lib translator_glsl.lib webcore_svg.lib webcore_rendering.lib i18n_api.lib webcore_remaining.lib webcore_platform.lib translator_common.lib ots.lib libwebp.lib libxslt.lib iccjpeg.lib wtf.lib yarr.lib webcore_bindings.lib webcore_html.lib webkit.lib speex.lib flac.lib ppapi_proxy.lib content_browser.lib cacheinvalidation.lib sync_notifier.lib sync.lib bspatch.lib lzma_sdk.lib courgette_lib.lib installer_util.lib gtest.lib http_server.lib debugger.lib ppapi_cpp_objects.lib chromoting_protocol.lib chromoting_client.lib libsrtp.lib notifier.lib chromoting_jingle_glue.lib yuv_convert_sse2.lib cpu_features.lib yuv_convert.lib media.lib chromoting_plugin.lib libjingle_p2p.lib expat.lib libjingle.lib ppapi_shared_impl.lib blob.lib appcache.lib libbzip2.lib fileapi.lib ipc.lib content_common.lib libxml2.lib default_plugin.lib gles2_cmd_helper.lib gles2_implementation.lib gles2_c_lib.lib command_buffer_common.lib command_buffer_client.lib gpu_ipc.lib ssl.lib v8_base.lib v8_snapshot.lib net_base.lib sdch.lib googleurl.lib net.lib libjpeg.lib zlib.lib libpng.lib skia_opts.lib skia.lib gfx.lib base_i18n.lib common_net.lib icuuc.lib icui18n.lib sqlite3.lib nspr.lib nss.lib dynamic_annotations.lib modp_b64.lib base.lib common_constants.lib protobuf_lite.lib views.lib cld.lib policy.lib printing.lib service.lib worker.lib utility.lib syncapi.lib renderer.lib profile_import.lib ppapi_plugin.lib chrome_gpu.lib browser.lib common.lib DelayImp.lib"
-				OutputFile="berkelium.dll"
+				OutputFile="..\bin\berkelium.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\chromium\chromium\src\chrome\$(ConfigurationName)\lib&quot;;..\..\chromium\chromium\src\third_party\platformsdk_win2008_6_1\files\lib"
 				IgnoreDefaultLibraryNames="libcmtd.lib;libcmt.lib"
@@ -354,6 +355,9 @@
 			</File>
 			<File
 				RelativePath="..\include\berkelium\ScriptUtil.hpp"
+				>
+			<File
+				RelativePath="..\include\berkelium\Protocol.hpp"
 				>
 			</File>
 			<File
