--- a/win32/demo/glut_demo.vcproj
+++ b/win32/demo/glut_demo.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="berkelium_d.lib"
+				AdditionalDependencies="../../bin/berkelium_d.lib"
 				OutputFile="..\$(ProjectName)_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=".."
@@ -137,7 +137,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="berkelium.lib"
+				AdditionalDependencies="../../bin/berkelium.lib"
 				OutputFile="..\$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=".."
