* All the projects now really build to \Bin * Added a build event for Berkelium: it will now automatically copy all the runtime DLLs it needs from Chromium.

--- a/win32/demo/glut_demo.vcproj
+++ b/win32/demo/glut_demo.vcproj
@@ -62,7 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="../../bin/berkelium_d.lib"
-				OutputFile="..\$(ProjectName)_d.exe"
+				OutputFile="..\..\bin\$(ProjectName)_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=".."
 				GenerateDebugInformation="true"
@@ -138,7 +138,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="../../bin/berkelium.lib"
-				OutputFile="..\$(ProjectName).exe"
+				OutputFile="..\..\bin\$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=".."
 				GenerateDebugInformation="true"
