--- a/win32/berkelium.vcproj
+++ b/win32/berkelium.vcproj
@@ -95,6 +95,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copying needed runtime DLLs from Chromium"
+				CommandLine="copyDllsFromChromium.bat $(ConfigurationName)"
 			/>
 		</Configuration>
 		<Configuration
@@ -178,6 +180,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copying needed runtime DLLs from Chromium"
+				CommandLine="copyDllsFromChromium.bat $(ConfigurationName)"
 			/>
 		</Configuration>
 	</Configurations>
